deployment/k8s/manifests/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/group.name: ingress-controller
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
    # alb.ingress.kubernetes.io/target-type: ip
    kubernetes.io/ingress.class: alb
  name: justice-adminportal-extension-website-ingress
  namespace: justice
spec:
  rules:
    - host: "${ROUTE53_PUBLIC_ZONE_NAME}"
      http:
        paths:
          - backend:
              service:
                name: justice-adminportal-extension-website
                port:
                  number: 80
            path: /admin-extension
            pathType: Prefix
