deployment/k8s/manifests/virtualservice.yaml
# Copyright (c) 2020-2021 AccelByte Inc. All Rights Reserved.
# This is licensed software from AccelByte Inc, for limitations
# and restrictions contact your company contract manager
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: justice-adminportal-extension-website
  namespace: ${NAMESPACE}
spec:
  gateways:
  - justice-gateway
  hosts:
  - ${BASE_DOMAIN}
  http:
  - match:
    - uri:
        prefix: /admin-extension
    route:
    - destination:
        host: justice-adminportal-extension-website
        port:
          number: 80
